# MediaCrawler

./: main.py  pyproject.toml  requirements.txt
config/: db_config.py
database/: models.py
media_platform/hot_topics/: client.py  news_collector.py  topic_extractor.py
store/hot_topics/: __init__.py  _store_impl.py
